# wikipedia-path-finder.rs

./: .gitignore  Cargo.toml  README.md  download_index.sh  gdownload.sh  start.sh
node-visualizer/: Cargo.toml
node-visualizer/src/: connection.rs  hash_grid.rs  lib.rs  wiki_node.rs
path-finder/: Cargo.toml  run.sh
path-finder/src/: galacticus.rs  main.rs  message.rs  node.rs
path-finder/src/galacticus/: mod.rs
path-finder/src/node/: mod.rs
src/: main.rs
src/galacticus/: mod.rs
src/node/: page_node.rs
webserver/: .gitignore  build_all.sh  package-lock.json  package.json  tsconfig.json
webserver/src/: index.ts  path-map.ts  rasterizer.ts  search.ts  title-index-loader.ts  wikipedia.ts
wiki-webapp/: index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
wiki-webapp/public/: path-image.html
wiki-webapp/src/: App.tsx  index.css  main.tsx
wiki-webapp/src/components/: map-view.tsx  node-visualizer.tsx  path-list.tsx  title-selector.tsx
wiki-webapp/src/components/icons/: icon-arrow-right.tsx
wiki-webapp/src/components/inputs/: base-input.tsx  button-submit.tsx  button.tsx  labeled-input.tsx
wiki-webapp/src/pages/: home.tsx
wiki-webapp/src/util/: path-api.ts  proptypes.ts  wasm-loader.ts
