[package]
name = "wikipedia_path_finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = "1.0"
kanal = "0.1.0-pre7"
threadpool = "1.8.1"
lazy_static = "1.4.0"
crossbeam-channel = "0.5"
crossbeam= "*"
rayon = "1.6.0"
load_file = "1.0.1"

#As server
rocket = { version = "0.5.0-rc.2", features = ["json"] }
tokio = { version = "1", features = ["full"] }

#Argument parsing
clap = { version = "4.0.27", features = ["derive"] }
itertools = "0.10.5"
